2005-03-08 18:06  antirez

	* ChangeLog, jim.c, jim.h, jimsh.c: Did some fix in jimsh.c,
	  exported some more API function to set variables and global
	  variables using a string C as name instead of a Jim_Obj. This is
	  more handy in mani conditions.

2005-03-08 16:10  patthoyts

	* bench.tcl, jim.c, jim.h: JIM_VERSION is to be an integer value
	  which we present as MAJOR.MINOR to users. MAJOR is JIM_VERSION /
	  100

2005-03-08 14:45  patthoyts

	* bench.tcl, jim.c, jim.h, jimsh.c: Added [info patchlevel] and
	  setup argv0 and argv variables in jimsh.  Changed
	  Jim_InteractivePrompt to take a pre-initialized interpreter.

2005-03-08 12:32  antirez

	* ChangeLog, jim.c: aesthetic changes to source code (SS)

2005-03-08 12:01  antirez

	* ChangeLog, jim.c: Removed an useless #if0 ... #endif block of
	  code.

2005-03-08 10:50  antirez

	* ChangeLog, jim.c, test.tcl: Info exists + tests (Clemens Hintze).

2005-03-08 10:42  antirez

	* ChangeLog, jim.c, regtest.tcl: Applied patch about unset a(x)
	  against non existing 'a' variable (Clemens Hintze). Dictionary
	  handling code and error messages modified a bit (me).

2005-03-07 21:53  antirez

	* ChangeLog, jim.c: Fixed a memory leak introduced with the last
	  callframe caching code commit.

2005-03-07 21:34  antirez

	* ChangeLog, jim.c, jim.h: Faster procedure calls (obtained caching
	  the hashtable, and with a fast path to free the cached hash
	  tables elements).

2005-03-07 18:58  antirez

	* ChangeLog, jim.c: Added "increasing", "decreasing", "ascii",
	  "nocase" options to lsort (SS). The plan is to don't add more
	  options than this, but -command, and put "dictionary style"
	  comparison in [string dictcompare].

2005-03-07 17:03  antirez

	* ChangeLog, Makefile, bench.tcl, jim.c: [lsort] command and list
	  sorting low-level functions (Pat Thoyts).  Speedup for floating
	  point math (me).

2005-03-07 16:30  patthoyts

	* jim.c, jim.h: Refactored the [info] command and added body and